--- a/BankWebApp/Pages/Index.cshtml
+++ b/BankWebApp/Pages/Index.cshtml
@@ -3,25 +3,6 @@
 
 @{
     ViewData["Title"] = "Home page";
-    int WeekLength = 7;
-
-
-}
-
-@*<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    </div>
-    @foreach (var user in Model.Users)
-    {
-    <h1>@user.Username</h1>
-
-    }
-*@
-
-@for (var i = 0; i < WeekLength; i++)
-{
-
 }
 
 <div class="container-fluid page-body-wrapper">
@@ -34,9 +15,13 @@
     <partial name="_MainContent" />
 </div>
 
+@*<h1>@Model.NumberOfCustomers</h1>
+<h1>@Model.NumberOfAccounts</h1>
+<h1>@Model.TotalOfAllAccounts</h1>*@
+
 @section scripts{
 <script type="text/javascript">
-
+    //Goes in as an array of data to dashboard.js
     let thisWeekTransaction = new Array();
     thisWeekTransaction[0] = @Model.ThisWeek.Mon;
     thisWeekTransaction[1] = @Model.ThisWeek.Tue;
@@ -45,8 +30,9 @@
     thisWeekTransaction[4] = @Model.ThisWeek.Fri;
     thisWeekTransaction[5] = @Model.ThisWeek.Sat;
     thisWeekTransaction[6] = @Model.ThisWeek.Sun;
-    console.log(thisWeekTransaction);
+   
 
+    //Goes in as an array of data to dashboard.js
     let lastWeekTransaction = new Array();
     lastWeekTransaction[0] = @Model.LastWeek.Mon;
     lastWeekTransaction[1] = @Model.LastWeek.Tue;
@@ -55,6 +41,14 @@
     lastWeekTransaction[4] = @Model.LastWeek.Fri;
     lastWeekTransaction[5] = @Model.LastWeek.Sat;
     lastWeekTransaction[6] = @Model.LastWeek.Sun;
-    console.log(lastWeekTransaction);
+
+
+    // Global variable, reached in Dashboard.js
+    let dataForAccountsCustomersOverview = new Array();
+    dataForAccountsCustomersOverview[0] = @Model.NumberOfCustomers;
+    dataForAccountsCustomersOverview[1] = @Model.NumberOfAccounts;
+
+
+    console.log("Hejhopp")
 </script>
 }
