--- a/BankWebApp/Pages/Index.cshtml
+++ b/BankWebApp/Pages/Index.cshtml
@@ -5,15 +5,15 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="container-fluid page-body-wrapper">
-    <partial name="_SettingsPanel" />
+
+    @*<partial name="_SettingsPanel" />
     <partial name="_RightSidebar" />
-    <partial name="_LeftSidebar" />
+    <partial name="_LeftSidebar" />*@
     <!-- partial -->
     <!-- partial:partials/_sidebar.html -->
 
     <partial name="_MainContent" />
-</div>
+
 
 @*<h1>@Model.NumberOfCustomers</h1>
 <h1>@Model.NumberOfAccounts</h1>
