--- a/BankWebApp/Pages/Customers/Customer.cshtml
+++ b/BankWebApp/Pages/Customers/Customer.cshtml
@@ -28,11 +28,11 @@
 
 
 
-<div class="container mt-5 pt-5">
-    <h2 class="mt-5">Customer Page - @Model.Customer.Givenname</h2>
+<div class="container white-widget pb-1 mt-5">
+    <h2 class="mt-3 pb-3 pl-2-rem">Customer Page - @Model.Customer.Givenname</h2>
 
-    <hr class="mt-5" />
-    <dl class="row mt-2">
+    <hr class="mt-4" />
+    <dl class="row mt-2 pl-2">
         <dt class="col-md-3 col-5 text-key">Account No</dt>
         <dd class="col-md-9 col-6 text-value">@Model.Customer.Id</dd>
 
@@ -81,15 +81,15 @@
     <table class="table table-hover">
         <thead>
             <tr>
-                <th>
+                <th class="text-key">
                     Account-ID
                 </th>
-                <th>
+                <th class="text-key">
                     Created Date
                 </th>
                 <th>
                     Balance
-                </th>
+                </th class="text-key">
                 <th></th>
         </thead>
         <tbody>
