--- a/BankWebApp/Pages/Shared/_Layout.cshtml
+++ b/BankWebApp/Pages/Shared/_Layout.cshtml
@@ -27,7 +27,6 @@
     <link rel="stylesheet" href="~/css/vertical-layout-light/style.css"> <!-- NOT WORKING -->
     <!-- endinject -->
     @*<link rel="shortcut icon" href="images/favicon.png" />*@  <!--  COME BACK TO LATER  !!! -->
-
     <!-- CDN FOR FONTAWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -58,8 +57,12 @@
     </header>
 
     <main role="main" class="pb-3">
-     
-        @RenderBody()
+        <div class="container-fluid page-body-wrapper">
+            <partial name="_SettingsPanel" />
+            <partial name="_RightSidebar" />
+            <partial name="_LeftSidebar" />
+            @RenderBody()
+        </div>
     </main>
 
 
