--- a/BankWebApp/Pages/Shared/_LeftSidebar.cshtml
+++ b/BankWebApp/Pages/Shared/_LeftSidebar.cshtml
@@ -1,21 +1,21 @@
 ﻿<nav class="sidebar sidebar-offcanvas" id="sidebar">
     <ul class="nav">
         <li class="nav-item">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" asp-page="../Index">
                 <i class="mdi mdi-grid-large menu-icon"></i>
                 <span class="menu-title">Dashboard</span>
             </a>
         </li>
-        <li class="nav-item nav-category">UI Elements</li>
+        @*<li class="nav-item nav-category">Menu</li>*@
         <li class="nav-item">
             <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
                 <i class="menu-icon mdi mdi-floor-plan"></i>
-                <span class="menu-title">UI Elements</span>
+                <span class="menu-title">Customers</span>
                 <i class="menu-arrow"></i>
             </a>
             <div class="collapse" id="ui-basic">
                 <ul class="nav flex-column sub-menu">
-                    <li class="nav-item"> <a class="nav-link" asp-page="/Customers/CustomersIndex">Customers</a></li>
+                    <li class="nav-item"> <a class="nav-link" asp-page="/Customers/CustomersIndex">All Customers</a></li>
 
                     <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a></li>
                     <li class="nav-item"> <a class="nav-link" href="pages/ui-features/dropdowns.html">Dropdowns</a></li>
