--- a/BankWebApp/Pages/Shared/_Navbar.cshtml
+++ b/BankWebApp/Pages/Shared/_Navbar.cshtml
@@ -9,11 +9,11 @@
             </button>
         </div>
         <div>
-            <a class="navbar-brand brand-logo" href="index.html">
-                <img src="images/logo.svg" alt="logo" />
+            <a class="navbar-brand brand-logo" asp-page="../Index">
+                <img src="~/images/logo.svg" alt="logo" />
             </a>
-            <a class="navbar-brand brand-logo-mini" href="index.html">
-                <img src="images/logo-mini.svg" alt="logo" />
+            <a class="navbar-brand brand-logo-mini" asp-page="../Index">
+                <img src="~/images/logo-mini.svg" alt="logo" />
             </a>
         </div>
     </div>
@@ -123,7 +123,7 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item preview-item">
                         <div class="preview-thumbnail">
-                            <img src="images/faces/face10.jpg" alt="image" class="img-sm profile-pic">
+                            <img src="~/images/faces/face10.jpg" alt="image" class="img-sm profile-pic">
                         </div>
                         <div class="preview-item-content flex-grow py-2">
                             <p class="preview-subject ellipsis font-weight-medium text-dark">Marian Garner </p>
@@ -132,7 +132,7 @@
                     </a>
                     <a class="dropdown-item preview-item">
                         <div class="preview-thumbnail">
-                            <img src="images/faces/face12.jpg" alt="image" class="img-sm profile-pic">
+                            <img src="~/images/faces/face12.jpg" alt="image" class="img-sm profile-pic">
                         </div>
                         <div class="preview-item-content flex-grow py-2">
                             <p class="preview-subject ellipsis font-weight-medium text-dark">David Grey </p>
@@ -141,7 +141,7 @@
                     </a>
                     <a class="dropdown-item preview-item">
                         <div class="preview-thumbnail">
-                            <img src="images/faces/face1.jpg" alt="image" class="img-sm profile-pic">
+                            <img src="~/images/faces/face1.jpg" alt="image" class="img-sm profile-pic">
                         </div>
                         <div class="preview-item-content flex-grow py-2">
                             <p class="preview-subject ellipsis font-weight-medium text-dark">Travis Jenkins </p>
@@ -152,11 +152,11 @@
             </li>
             <li class="nav-item dropdown d-none d-lg-block user-dropdown">
                 <a class="nav-link" id="UserDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img class="img-xs rounded-circle" src="images/faces/face8.jpg" alt="Profile image">
+                    <img class="img-xs rounded-circle" src="~/images/faces/face8.jpg" alt="Profile image">
                 </a>
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
                     <div class="dropdown-header text-center">
-                        <img class="img-md rounded-circle" src="images/faces/face8.jpg" alt="Profile image">
+                        <img class="img-md rounded-circle" src="~/images/faces/face8.jpg" alt="Profile image">
                         <p class="mb-1 mt-3 font-weight-semibold">Allen Moreno</p>
                         <p class="fw-light text-muted mb-0">allenmoreno@gmail.com</p>
                     </div>
