--- a/BankWebApp/Pages/Transactions/Deposit.cshtml
+++ b/BankWebApp/Pages/Transactions/Deposit.cshtml
@@ -2,3 +2,18 @@
 @model BankWebApp.Pages.Transactions.DepositModel
 @{
 }
+
+<form method="post">
+    <div class="form-group">
+        <label asp-for="Amount">Amount</label>
+        <input class="form-control" asp-for="Amount" />
+        <span class="field-validation-error" asp-validation-for="Amount"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="DateWhen">Date for deposit</label>
+        <input class="form-control" asp-for="DateWhen" />
+        <span class="field-validation-error" asp-validation-for="DateWhen"></span>
+    </div>
+    <button class="btn btn-success"type="submit">Deposit</button>
+</form>
