--- a/BankWebApp/Pages/Shared/_Layout.cshtml
+++ b/BankWebApp/Pages/Shared/_Layout.cshtml
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="~/BankWebApp.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/BankWebApp.styles.css" asp-append-version="true" />
 
+    <!-- SELECT2 -->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+
     <!--    ADMIN PANEL    -->
     <!-- plugins:css -->
     <link rel="stylesheet" href="~/vendors/feather/feather.css">
@@ -17,6 +22,9 @@
     <link rel="stylesheet" href="~/vendors/typicons/typicons.css">
     <link rel="stylesheet" href="~/vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="~/vendors/css/vendor.bundle.base.css">
+
+
+
 
     <!-- endinject -->
     <!-- Plugin css for this page -->
@@ -29,6 +37,26 @@
     @*<link rel="shortcut icon" href="images/favicon.png" />*@  <!--  COME BACK TO LATER  !!! -->
     <!-- CDN FOR FONTAWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <style>
+        /*select 2*/
+        .select2-selection__rendered {
+            line-height: 12px !important;
+        }
+
+        .select2-container .select2-selection--single {
+            height: 40px !important;
+        }
+
+        .select2-selection__arrow {
+            height: 40px !important;
+        }
+
+
+       
+    </style>
+
+
 </head>
 <body>
 
