--- a/BankWebApp/Pages/Shared/_Navbar.cshtml
+++ b/BankWebApp/Pages/Shared/_Navbar.cshtml
@@ -10,11 +10,15 @@
 
 <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex align-items-top flex-row">
     <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-start">
-        <div class="me-3">
-            <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-bs-toggle="minimize">
-                <span class="icon-menu"></span>
-            </button>
-        </div>
+        @if (SignInManager.IsSignedIn(User))
+        {
+
+            <div class="me-3">
+                <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-bs-toggle="minimize">
+                    <span class="icon-menu"></span>
+                </button>
+            </div>
+        }
         <div>
             <a class="navbar-brand brand-logo" asp-page="../Index">
                 <img src="~/images/logo.svg" alt="logo" />
@@ -194,12 +198,12 @@
                     </form>
                 </li>
             }
-            else
+            @*else
             {
                 <li class="nav-item d-none d-lg-block">
                     <a class="btn btn-success" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
                 </li>
-            }
+            }*@
         </ul>
         <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-bs-toggle="offcanvas">
             <span class="mdi mdi-menu"></span>
