--- a/BankWebApp/Areas/Identity/Pages/Account/Login.cshtml
+++ b/BankWebApp/Areas/Identity/Pages/Account/Login.cshtml
@@ -41,9 +41,9 @@
                     <p class="text-size">
                         <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
                     </p>
-                    <p class="text-size">
+                    @*<p class="text-size">
                         <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
+                    </p>*@
                     <p class="text-size">
                         <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
                     </p>
