--- a/BankWebApp/wwwroot/css/site.css
+++ b/BankWebApp/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 main {
@@ -7,18 +7,18 @@ main {
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
 .text-key {
@@ -51,6 +51,21 @@ body {
 .pl-2-rem {
     padding-left: 2rem;
 }
+
+
+
+.navbar .navbar-menu-wrapper {
+    background: #fff;
+}
+
+.navbar .navbar-brand-wrapper,
+.sidebar {
+    background: #fff;
+}
+
+    .sidebar .nav.sub-menu {
+        background: #f2f2f2;
+    }
 
 
 
@@ -119,8 +134,3 @@ body {
     transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
     color: white;
 }
-
-
-
-
-
