--- a/BankWebApp/wwwroot/css/vertical-layout-light/style.css
+++ b/BankWebApp/wwwroot/css/vertical-layout-light/style.css
@@ -29091,20 +29091,20 @@ div.tagsinput span.tag a {
   margin-top: .2rem;
 }
 
-.sidebar .nav:not(.sub-menu) > .nav-item:hover > .nav-link, .sidebar .nav:not(.sub-menu) > .nav-item:hover[aria-expanded="true"] {
-  background: #fff;
-  color: #fff;
-}
+    .sidebar .nav:not(.sub-menu) > .nav-item:hover > .nav-link, .sidebar .nav:not(.sub-menu) > .nav-item:hover[aria-expanded="true"] {
+        background: #f2f2f2; /* Changed by Heimir*/
+        color: #fff;
+    }
 
 .sidebar .nav:not(.sub-menu) > .nav-item > .nav-link {
   margin: 0;
 }
 
-.sidebar .nav:not(.sub-menu) > .nav-item > .nav-link[aria-expanded="true"] {
-  border-radius: 8px 8px 0 0;
-  background: #fff;
-  color: #1F3BB3;
-}
+    .sidebar .nav:not(.sub-menu) > .nav-item > .nav-link[aria-expanded="true"] {
+        border-radius: 8px 8px 0 0;
+        background: #f2f2f2; /* Changed by Heimir*/
+        color: #1F3BB3;
+    }
 
 .sidebar .nav:not(.sub-menu) > .nav-item.active {
   background: transparent;
